--- a/index.html
+++ b/index.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dheep Shemare Generation UK Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
 </head>
-<body>
-    <h1>Dheep Shemare - Generation UK Portfolio</h1>
 
-    <ul>
-        <li>HTML Fruit Machine</li>
-        <li>Fast Food Ordering System</li>
-        <li>Node.js fruit machine</li>
-        <li>BBC Graphic precise CSS Ecxecise</li>
-    </ul>
+<body>
+    <div class="banner"></div>
+    <h1 class="name">Dheep Shemare</h1>
+    <h1 class="tag">Generation UK Portfolio</h1>
+
+
+    <div class="list">
+        <ul>
+            <li>
+                <a href="#">HTML Fruit Machine</a>
+                <p>Initially made in Node.js. Created using JavaScript, HTML CSS and RequestAnimationFrame() callback
+                </p>
+            </li>
+            <li>
+                <a href="#">Fast Food Ordering System</a>
+                <p>A client-sever food ordering application written with Node.js back end</p>
+            </li>
+            <li><a href="#">Node. js Fuit Machine</a></li>
+            <li><a href="#">BBC Graphic - Precise CSS Replication</a></li>
+        </ul>
+    </div>
+
+    <div class="contact">
+        <h2><a href="https://www.linkedin.com/in/dheep-shemare-9b3118192/">Linkedin</a></h2>
+        <h2><a href="mailto:dheepshemare@hotmail.co.uk">Email</a></h2>
+    </div>
 
 
 </body>
+
 </html>
