Linked fruit page

--- a/home.html
+++ b/home.html
@@ -19,16 +19,10 @@
 
     <div class="list">
         <ul>
-            <li>
-                <a href="#">HTML Fruit Machine</a>
-                <p>Initially made in Node.js. Created using JavaScript, HTML CSS and RequestAnimationFrame() callback
-                </p>
-            </li>
-            <li>
-                <a href="#">Fast Food Ordering System</a>
-                <p>A client-sever food ordering application written with Node.js back end</p>
-            </li>
-            <li><a href="#">Node. js Fuit Machine</a></li>
+            <li><a href="fruit.html" target="_blank">HTML & Node JS Fruit Machine</a></li>
+            <li><a href="#">Fast Food Ordering System</a></li>
+            <li><a href="#">Bistro landing Page</a></li>
+            <li><a href="#">Ride The Waves</a></li>
             <li><a href="#">BBC Graphic - Precise CSS Replication</a></li>
         </ul>
     </div>
