--- a/home.html
+++ b/home.html
@@ -13,8 +13,8 @@
 
 <body>
     <div class="banner"></div>
-    <h1 class="name">Dheep Shemare</h1>
-    <h1 class="tag">Generation UK Portfolio</h1>
+    <h1 class="name">Dheep Shemare | Web Development Portfolio</h1>
+    <h1 class="tag"></h1>
 
 
     <div class="list">
