--- a/bbc.html
+++ b/bbc.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruit Machine HTML</title>
+    <title>BBC Graphic - Precise CSS Replication</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
@@ -13,10 +13,9 @@
 
 <body>
     <div class="heading-info">
-        <h2>Fruit Machine HTML - Generation UK Project </h2>
-        <h4>Initially made in Node. js. Created using JavaScript, HTML CSS and RequestAnimationFrame()callback</h4>
+        <h2>BBC Graphic - Precise CSS Replication</h2>
+        <h4>A replication task to use pure CCS to precisely recreate the BBC information banner</h4>
     </div>
-
 </body>
 
 </html>
