--- a/fastfood.html
+++ b/fastfood.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruit Machine HTML</title>
+    <title>Fast Food Ordering System</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
@@ -13,10 +13,9 @@
 
 <body>
     <div class="heading-info">
-        <h2>Fruit Machine HTML - Generation UK Project </h2>
-        <h4>Initially made in Node. js. Created using JavaScript, HTML CSS and RequestAnimationFrame()callback</h4>
+        <h2>Fast Food Ordering System </h2>
+        <h4>An ordering system for the purpose of a fast food restaurant. Created using JavaScript, HTML & CSS. </h4>
     </div>
-
 </body>
 
 </html>
