--- a/home.html
+++ b/home.html
@@ -12,24 +12,25 @@
 </head>
 
 <body>
-    <div class="banner"></div>
-    <h1 class="name">Dheep Shemare | Web Development Portfolio</h1>
-    <h1 class="tag"></h1>
 
+    <img class="home-image" src="images/self2.jpg" alt="An image of me" style="width:150px;height:150px;">
+
+    <h2 class="name">Dheep Shemare | Web Development Portfolio</h2>
 
     <div class="list">
         <ul>
             <li><a href="fruit.html" target="_blank">HTML & Node JS Fruit Machine</a></li>
-            <li><a href="#">Fast Food Ordering System</a></li>
-            <li><a href="#">Bistro landing Page</a></li>
-            <li><a href="#">Ride The Waves</a></li>
-            <li><a href="#">BBC Graphic - Precise CSS Replication</a></li>
+            <li><a href="fastfood.html" target="_blank">Fast Food Ordering System</a></li>
+            <li><a href="bistro.html" target="_blank">"The Bistro" Cafe landing Page</a></li>
+            <li><a href="ridethewaves.html" target="_blank">Ride The Waves</a></li>
+            <li><a href="bbc.html" target="_blank">BBC Graphic - Precise CSS Replication</a></li>
         </ul>
     </div>
 
     <div class="contact">
-        <h2><a href="https://www.linkedin.com/in/dheep-shemare-9b3118192/">Linkedin</a></h2>
-        <h2><a href="mailto:dheepshemare@hotmail.co.uk">Email</a></h2>
+        <h3><a href="https://www.linkedin.com/in/dheep-shemare-9b3118192/" target="_blank">LinkedIn</a>
+            <a href="mailto:dheepshemare@hotmail.co.uk" target="_blank"> Email</a>
+        </h3>
     </div>
 
 
