--- a/home.html
+++ b/home.html
@@ -28,8 +28,8 @@
     </div>
 
     <div class="contact">
-        <h3><a href="https://www.linkedin.com/in/dheep-shemare-9b3118192/" target="_blank">LinkedIn</a>
-            <a href="mailto:dheepshemare@hotmail.co.uk" target="_blank"> Email</a>
+        <h3><a href="https://www.linkedin.com/in/dheep-shemare-9b3118192/" target="_blank">LinkedIn</a><a
+                href="mailto:dheepshemare@hotmail.co.uk" target="_blank"> Email</a>
         </h3>
     </div>
 
