changed wording to bbc and waves

--- a/bbc.html
+++ b/bbc.html
@@ -14,8 +14,22 @@
 <body>
     <div class="heading-info">
         <h2>BBC Graphic - Precise CSS Replication</h2>
-        <h4>A replication task to use pure CCS to precisely recreate the BBC information banner</h4>
+        <h4>A replication task using pure CCS to precisely recreate the BBC information banner</h4>
+        <br>
+        <h4><em>Replication</em></h4>
     </div>
+
+    <img src="/images/BBC-CSS.jpg" alt="Nicola Sturgeon's speach BBC" style="width:45vw;height:22vw;"
+        class="bbc-original">
+
+    <img src="/images/BBC-replica.jpg" alt="Nicola Sturgeon's speach BBC Replica" style="width:45vw;height:22vw;"
+        class="bbc-replica">
+
+    <section class="section">
+        <h4><em>Original</em></h4>
+    </section>
+
+    <footer class="footer-bbc"></footer>
 </body>
 
 </html>
