--- a/ridethewaves.html
+++ b/ridethewaves.html
@@ -14,7 +14,7 @@
 <body>
     <div class="heading-info">
         <h2>Ride The Waves</h2>
-        <h4>A personal project creating a modern landing page for mock travel business using HTML & CSS</h4>
+        <h4>A personal project creating a modern landing page for a simulated travel business using HTML & CSS</h4>
     </div>
 </body>
 
