images fixed in bcc, waves and bistro

--- a/bbc.html
+++ b/bbc.html
@@ -18,11 +18,11 @@
         <br>
         <h4><em>Replication</em></h4>
     </div>
-
-    <img src="/images/BBC-CSS.jpg" alt="Nicola Sturgeon's speach BBC" style="width:45vw;height:22vw;"
+    <!-- prepend 'src' with dot -->
+    <img src="./images/BBC-CSS.jpg" alt="Nicola Sturgeon's speach BBC" style="width:45vw;height:22vw;"
         class="bbc-original">
 
-    <img src="/images/BBC-replica.jpg" alt="Nicola Sturgeon's speach BBC Replica" style="width:45vw;height:22vw;"
+    <img src="./images/BBC-replica.jpg" alt="Nicola Sturgeon's speach BBC Replica" style="width:45vw;height:22vw;"
         class="bbc-replica">
 
     <section class="section">
