--- a/bistro.html
+++ b/bistro.html
@@ -13,9 +13,13 @@
 
 <body>
     <div class="heading-info">
-        <h2>"The Bistro" Cafe landing Page</h2>
-        <h4>A personal project using pure CCS to create a mock cafe.</h4>
+        <h2>The Bistro Cafe</h2>
+        <h4>A personal project using pure HTML & CCS to create a landing page for a simulated a cafe.</h4>
     </div>
+
+    <img src="./images/bistro new.png" alt="The Bistro cafe landing page" style="width:69vw;height:32vw;"
+        class="waves-image">
+
 </body>
 
 </html>
