--- a/ridethewaves.html
+++ b/ridethewaves.html
@@ -16,6 +16,11 @@
         <h2>Ride The Waves</h2>
         <h4>A personal project creating a modern landing page for a simulated travel business using HTML & CSS</h4>
     </div>
+    <img class="waves-image" src="./images/ridethewaves.png" alt="screenshot of ride the waves landing page"
+        style="width:70vw;height:30vw">
+
+
+
 </body>
 
 </html>
