forgot to save last commit

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <ul>
             <li><a href="fruit.html" target="_blank">HTML & Node JS Fruit Machine</a></li>
             <li><a href="fastfood.html" target="_blank">Fast Food Ordering System</a></li>
-            <li><a href="bistro.html" target="_blank">"The Bistro" Cafe landing Page</a></li>
+            <li><a href="bistro.html" target="_blank">The Bistro Cafe</a></li>
             <li><a href="ridethewaves.html" target="_blank">Ride The Waves</a></li>
             <li><a href="bbc.html" target="_blank">BBC Graphic - Precise CSS Replication</a></li>
         </ul>
