--- a/bbc.html
+++ b/bbc.html
@@ -14,7 +14,7 @@
 <body>
     <div class="heading-info">
         <h2>BBC Graphic - Precise CSS Replication</h2>
-        <h4>A replication task using pure CCS to precisely recreate the BBC information banner</h4>
+        <h4>A replication task using pure HTML & CCS to precisely recreate the BBC information banner</h4>
         <br>
         <h4><em>Replication</em></h4>
     </div>
