refactored code in html and css. Much cleaner system

--- a/bbc.html
+++ b/bbc.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="heading-info">
-        <h2>BBC Graphic - Precise CSS Replication</h2>
+        <h2 class="page-title">BBC Graphic - Precise CSS Replication</h2>
         <h4>A replication task using pure HTML & CCS to precisely recreate the BBC information banner</h4>
         <br>
         <h4><em>Replication</em></h4>
