--- a/bistro.html
+++ b/bistro.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="heading-info">
-        <h2>The Bistro Cafe</h2>
+        <h2 class="page-title">The Bistro Cafe</h2>
         <h4>A personal project using pure HTML & CCS to create a landing page for a simulated a cafe.</h4>
     </div>
 
