--- a/fruit.html
+++ b/fruit.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="heading-info">
-        <h2>Fruit Machine HTML - Generation UK Project </h2>
+        <h2 class="page-title">Fruit Machine HTML - Generation UK Project </h2>
         <h4>Initially made in Node. js. Created using JavaScript, HTML CSS and RequestAnimationFrame()callback</h4>
     </div>
 
