--- a/index.html
+++ b/index.html
@@ -17,28 +17,29 @@
 
     <h2 class="name">Dheep Shemare | Web Development Portfolio</h2>
 
-    <div class="list">
-        <ul>
-            <li><a href="fruit.html" target="_blank">HTML & Node JS Fruit Machine</a></li>
-            <li><a href="fastfood.html" target="_blank">Fast Food Ordering System</a></li>
-            <li><a href="bistro.html" target="_blank">The Bistro Cafe</a></li>
-            <li><a href="ridethewaves.html" target="_blank">Ride The Waves</a></li>
-            <li><a href="bbc.html" target="_blank">BBC Graphic - Precise CSS Replication</a></li>
-        </ul>
+    <div class="project-list-div">
+
+        <a href="fruit.html" class="project-list-item" target="_blank">HTML & Node JS Fruit Machine</a>
+        <br>
+        <a href="fastfood.html" class="project-list-item" target="_blank">Fast Food Ordering System</a>
+        <br>
+        <a href="bistro.html" class="project-list-item" target="_blank">The Bistro Cafe</a>
+        <br>
+        <a href="ridethewaves.html" class="project-list-item" target="_blank">Ride The Waves</a>
+        <br>
+        <a href="bbc.html" class="project-list-item" target="_blank">BBC Graphic - Precise CSS Replication</a>
     </div>
 
-    <div class="contact">
-        <ul>
-            <li>
-                <h3><a href="https://www.linkedin.com/in/dheep-shemare-9b3118192/" target="_blank">LinkedIn</a>
-            </li>
-            <li>
-                <h3><a href="mailto:dheepshemare@hotmail.co.uk" target="_blank">Email</a></h3>
-            </li>
-            <li>
-                <h3><a href="https://github.com/dheep404" target="_blank">GitHub</a></h3>
-            </li>
-        </ul>
+    <div class="contact-div">
+
+        <a href="https://www.linkedin.com/in/dheep-shemare-9b3118192/" class="contact-list-item"
+            target="_blank">LinkedIn</a>
+        <br>
+        <a href="mailto:dheepshemare@hotmail.co.uk" class="contact-list-item" target="_blank">Email</a>
+        <br>
+        <a href="https://github.com/dheep404" class="contact-list-item" target="_blank">GitHub</a>
+
+
     </div>
 
 
