--- a/fastfood.html
+++ b/fastfood.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="heading-info">
-        <h2>Fast Food Ordering System </h2>
+        <h2 class="page-title">Fast Food Ordering System </h2>
         <h4>An ordering system for the purpose of a fast food restaurant. Created using JavaScript, HTML & CSS. </h4>
     </div>
 </body>
