Big update. Mobile site done for home. Readjust of project site layouts using flexbox

--- a/bbc.html
+++ b/bbc.html
@@ -12,24 +12,41 @@
 </head>
 
 <body>
-    <div class="heading-info">
-        <h2 class="page-title">BBC Graphic - Precise CSS Replication</h2>
-        <h4>A replication task using pure HTML & CCS to precisely recreate the BBC information banner</h4>
-        <br>
-        <h4><em>Replication</em></h4>
+
+    <div class="bbc-flex-container">
+
+        <div class="bbc-text">
+            <div class="heading-info">
+                <h2 class="page-title">Precise CSS Replication</h2>
+                <h3 class="page-info line-height">A replication task using pure HTML & CCS to precisely recreate the BBC
+                    information
+                    banner</h3>
+                <br>
+            </div>
+        </div>
+
+        <div class="bbc-images">
+            <p class="heading-info">Replication</p>
+
+            <img src="./images/BBC-replica.jpg" alt="Nicola Sturgeon's speach BBC Replica"
+                style="width:40vw;height:19vw;" class="bbc-replica">
+
+            <p class="heading-info">Original</p>
+
+            <img src="./images/BBC-CSS.jpg" alt="Nicola Sturgeon's speach BBC" style="width:40vw;height:19vw;"
+                class="bbc-original">
+        </div>
+
     </div>
-    <!-- prepend 'src' with dot -->
-    <img src="./images/BBC-CSS.jpg" alt="Nicola Sturgeon's speach BBC" style="width:45vw;height:22vw;"
-        class="bbc-original">
 
-    <img src="./images/BBC-replica.jpg" alt="Nicola Sturgeon's speach BBC Replica" style="width:45vw;height:22vw;"
-        class="bbc-replica">
 
-    <section class="section">
-        <h4><em>Original</em></h4>
-    </section>
 
-    <footer class="footer-bbc"></footer>
+
+
+
+
+
+
 </body>
 
 </html>
