--- a/fastfood.html
+++ b/fastfood.html
@@ -12,10 +12,15 @@
 </head>
 
 <body>
-    <div class="heading-info">
-        <h2 class="page-title">Fast Food Ordering System </h2>
-        <h4>An ordering system for the purpose of a fast food restaurant. Created using JavaScript, HTML & CSS. </h4>
+
+    <div class="container">
+        <div class="heading-info">
+            <h2 class="page-title">Fast Food Ordering System </h2>
+            <h4>An ordering system for the purpose of a fast food restaurant. Created using JavaScript, HTML & CSS.</h4>
+            <p>PAGE UNDER CONSTRUCTION</p>
+        </div>
     </div>
+
 </body>
 
 </html>
