--- a/fruit.html
+++ b/fruit.html
@@ -12,9 +12,13 @@
 </head>
 
 <body>
-    <div class="heading-info">
-        <h2 class="page-title">Fruit Machine HTML - Generation UK Project </h2>
-        <h4>Initially made in Node. js. Created using JavaScript, HTML CSS and RequestAnimationFrame()callback</h4>
+
+    <div class="container">
+        <div class="heading-info">
+            <h2 class="page-title">Fruit Machine HTML - Generation UK Project </h2>
+            <h4>Initially made in Node. js. Created using JavaScript, HTML CSS and RequestAnimationFrame()callback</h4>
+            <p>PAGE UNDER CONSTRUCTION</p>
+        </div>
     </div>
 
 </body>
