--- a/index.html
+++ b/index.html
@@ -12,35 +12,49 @@
 </head>
 
 <body>
+    <div class="container">
 
-    <img class="home-image" src="images/self2.jpg" alt="An image of me" style="width:150px;height:150px;">
+        <div class="box1">
 
-    <h2 class="name">Dheep Shemare | Web Development Portfolio</h2>
+            <div class="title-box">
+                <h2 class="name">Dheep Shemare <br class="line-break-mob"> Web Development Portfolio</h2>
+            </div>
 
-    <div class="project-list-div">
+            <img class="home-image-mobile" src="images/self2.jpg" alt="An image of me">
 
-        <a href="fruit.html" class="project-list-item" target="_blank">HTML & Node JS Fruit Machine</a>
-        <br>
-        <a href="fastfood.html" class="project-list-item" target="_blank">Fast Food Ordering System</a>
-        <br>
-        <a href="bistro.html" class="project-list-item" target="_blank">The Bistro Cafe</a>
-        <br>
-        <a href="ridethewaves.html" class="project-list-item" target="_blank">Ride The Waves</a>
-        <br>
-        <a href="bbc.html" class="project-list-item" target="_blank">BBC Graphic - Precise CSS Replication</a>
+
+
+            <div class="project-list-div">
+                <h3>PROJECTS</h3>
+                <a href="fruit.html" class="project-list-item" target="_blank">HTML & Node JS Fruit Machine</a>
+                <a href="fastfood.html" class="project-list-item" target="_blank">Fast Food Ordering System</a>
+                <a href="bistro.html" class="project-list-item" target="_blank">The Bistro Cafe</a>
+                <a href="ridethewaves.html" class="project-list-item" target="_blank">Ride The Waves</a>
+                <a href="bbc.html" class="project-list-item" target="_blank">BBC Graphic - Precise CSS Replication</a>
+            </div>
+        </div>
+
+        <div class="box2">
+
+            <img class="home-image" src="images/self2.jpg" alt="An image of me" style="width:9em;height:9em;">
+
+            <div class="contact-div">
+                <a href="https://www.linkedin.com/in/dheep-shemare-9b3118192/" class="contact-list-item"
+                    target="_blank">LinkedIn</a>
+                <br>
+                <a href="mailto:dheepshemare@hotmail.co.uk" class="contact-list-item" target="_blank">Email</a>
+                <br>
+                <a href="https://github.com/dheep404" class="contact-list-item" target="_blank">GitHub</a>
+            </div>
+
+        </div>
+
     </div>
 
-    <div class="contact-div">
-
-        <a href="https://www.linkedin.com/in/dheep-shemare-9b3118192/" class="contact-list-item"
-            target="_blank">LinkedIn</a>
-        <br>
-        <a href="mailto:dheepshemare@hotmail.co.uk" class="contact-list-item" target="_blank">Email</a>
-        <br>
-        <a href="https://github.com/dheep404" class="contact-list-item" target="_blank">GitHub</a>
 
 
-    </div>
+
+
 
 
 </body>
