--- a/ridethewaves.html
+++ b/ridethewaves.html
@@ -12,13 +12,15 @@
 </head>
 
 <body>
-    <div class="heading-info">
-        <h2 class="page-title">Ride The Waves</h2>
-        <h4>A personal project creating a modern landing page for a simulated travel business using HTML & CSS</h4>
+    <div class="container">
+        <div class="heading-info">
+            <h2 class="page-title">Ride The Waves</h2>
+            <h4 class="line-height">A personal project creating a modern landing page for a simulated travel business
+                using HTML & CSS</h4>
+        </div>
+        <img class="waves-image" src="./images/ridethewaves.png" alt="screenshot of ride the waves landing page"
+            style="width:69vw;height:32vw">
     </div>
-    <img class="waves-image" src="./images/ridethewaves.png" alt="screenshot of ride the waves landing page"
-        style="width:70vw;height:30vw">
-
 
 
 </body>
