--- a/bistro.html
+++ b/bistro.html
@@ -12,14 +12,16 @@
 </head>
 
 <body>
-    <div class="heading-info">
-        <h2 class="page-title">The Bistro Cafe</h2>
-        <h4>A personal project using pure HTML & CCS to create a landing page for a simulated a cafe.</h4>
+    <div class="container">
+        <div class="heading-info">
+            <h2 class="page-title">The Bistro Cafe</h2>
+            <h4 class="line-height">A personal project using pure HTML & CCS to create a landing page for a simulated
+                cafe.</h4>
+        </div>
+
+        <img src="./images/bistro new.png" alt="The Bistro cafe landing page" style="width:69vw;height:32vw;"
+            class="waves-image">
     </div>
-
-    <img src="./images/bistro new.png" alt="The Bistro cafe landing page" style="width:69vw;height:32vw;"
-        class="waves-image">
-
 </body>
 
 </html>
