pushing up current version

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
                 <a href="bistro.html" class="project-list-item" target="_blank">The Bistro Cafe</a>
                 <a href="ridethewaves.html" class="project-list-item" target="_blank">Ride The Waves</a>
                 <a href="bbc.html" class="project-list-item" target="_blank">BBC Graphic - Precise CSS Replication</a>
+                <a href="gameOfLife.html" class="project-list-item" target="_blank">Game Of Life</a>
+
             </div>
         </div>
 
