rock paper scissors added to portfolio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
             <div class="project-list-div">
                 <h3>PROJECTS</h3>
-                <a href="fruit.html" class="project-list-item" target="_blank">HTML & Node JS Fruit Machine</a>
+                <a href="rockPaperSciccors.html" class="project-list-item" target="_blank">Rock Paper Sciccors</a>
                 <a href="fastfood.html" class="project-list-item" target="_blank">Fast Food Ordering System</a>
                 <a href="bistro.html" class="project-list-item" target="_blank">The Bistro Cafe</a>
                 <a href="ridethewaves.html" class="project-list-item" target="_blank">Ride The Waves</a>
