--- a/rockPaperSciccors.html
+++ b/rockPaperSciccors.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruit Machine HTML</title>
+    <title>Rock Paper Sciccors</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap" rel="stylesheet">
@@ -15,10 +15,13 @@
 
     <div class="container">
         <div class="heading-info">
-            <h2 class="page-title">Fruit Machine HTML - Generation UK Project </h2>
-            <h4>Initially made in Node. js. Created using JavaScript, HTML CSS and RequestAnimationFrame()callback</h4>
-            <p>PAGE UNDER CONSTRUCTION</p>
+            <h2 class="page-title">Rock Paper Sciccors</h2>
+            <h4>A simple game of rock, paper, sciccors using HTML, CSS & Javascript</h4>
+            <a href="https://dheep404.github.io/Rock-Paper-Sciccors/" class="external-project-link">View Project</a>
         </div>
+
+        <img class="waves-image" src="./images/rps.png" alt="screenshot of rock paper scissors"
+            style="width:69vw;height:32vw">
     </div>
 
 </body>
